# asteroid

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  cli.html  codecov.yml  contribution_guide.html  environment.yml  faq.html  genindex.html  hubconf.py  index.html  installation.html  model_card_template.md  objects.inv  plot_spec.py  predict.py  py-modindex.html  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  requirements_torchhub.txt  search.html  searchindex.js  setup.py  supported_datasets.html  test_requirements.txt  train.py  train_ignite.py  (+3 more)
_sources/: faq.rst.txt  index.rst.txt  supported_datasets.rst.txt  training_and_evaluation.rst.txt  why_use_asteroid.rst.txt
_static/: documentation_options.js
analysis/: dim_reduce_spectrogram.py
asteroid/: __init__.py  binarize.py  complex_nn.py  foo.py  losses.py  metrics.py  preprocess_wham.py  separate.py  solver.py  sub_module.py  torch_utils.py  utils.py
avspeech/: __init__.py  plot_spec.py  train.py  validate.py
data/: wav.py
docs/: Makefile  README.md  requirements.txt
egs/: README.md
examples/: 01_AsteroidGettingStarted.ipynb  02_Filterbank.ipynb  03_PITLossWrapper.ipynb  Filterbank.ipynb  PITLossWrapper.ipynb  README.md
loader/: __init__.py  audio_feature_generator.py  audio_mixer_generator.py  convert_to_spec.py  data.py  data_loader.py  download.py  extract_audio.py  frames.py  generate_video_embedding.py  remove_corrupt.py  (+1 more)
(+838 files in other folders)
